CSS scroll fix for console output that was too wide

--- a/assets/css/less/main.less
+++ b/assets/css/less/main.less
@@ -580,6 +580,7 @@ a.brand
 	background: @colorShadePlusOne;
 	padding: @insidePadding;
 	color: @textColorLight;
+	overflow-x: scroll;
 	.border-radius(3px);
 
 	.error {
